--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "prj-uber-clone-client",
+  "name": "nuber-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.0",
-    "@types/react": "16.8.10",
-    "@types/react-dom": "16.8.3",
-    "apollo-boost": "^0.3.1",
-    "graphql": "^14.2.1",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.3",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "typescript": "3.4.1"
+    "apollo-boost": "^0.1.12",
+    "graphql": "^0.13.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-apollo": "^2.1.9",
+    "react-dom": "^16.4.2",
+    "react-scripts-ts": "2.17.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.5.7",
+    "@types/react": "^16.4.8",
+    "@types/react-dom": "^16.0.7",
+    "typescript": "^3.0.1"
+  }
 }
