--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0"
+    "react-scripts-ts": "2.17.0",
+    "styled-components": "^4.2.0",
+    "styled-reset": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -22,6 +24,7 @@
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "@types/styled-components": "^4.1.12",
     "typescript": "^3.0.1"
   }
 }
