--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.12",
     "graphql": "^0.13.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "2.17.0",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.5"
