--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts-ts": "2.17.0",
+    "react-toastify": "^5.0.0-rc.6",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.5"
   },
@@ -20,7 +21,9 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
+    "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.queries.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
