--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.2",
     "react-apollo": "^2.1.9",
     "react-dom": "^16.4.2",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts-ts": "2.17.0",
