--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.12",
+    "axios": "^0.18.0",
     "graphql": "^0.13.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -14,6 +15,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts-ts": "2.17.0",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^5.0.0-rc.6",
     "styled-components": "^4.2.0",
     "styled-reset": "^2.0.5"
@@ -31,6 +33,7 @@
     "@types/node": "^10.5.7",
     "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "@types/react-sidebar": "^3.0.0",
     "@types/styled-components": "^4.1.12",
     "typescript": "^3.0.1"
   }
